2009-08-17  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m
	Safety check in case no objectClass attribute is returned
	from the LDAP server
	* Updated NEWS file

2009-08-14  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/AdministrationUI/UIxAdministration.m: new administration
	module. Initial functionalities are limited to ACLs management.

2009-08-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Tools/SOGoToolBackup.m (-parseArguments): modified to either
	accept "ALL" or a list of identifiers as arguments.

	* Tools/SOGoToolRestore.m: new "sogo-tool" utility that restores
	the specified user data previously created by the "backup"
	command.
	(+initialize): load the "Appointments.SOGo" and "Contacts.SOGo"
	bundle in order to access some categories found therein that are
	used by OGoContentStore.
	(-parseModeArguments) mode arguments are now put at the beginning
	of the command parameter string. Added "-F" mode that acts
	"destructivelly". Added "-l" mode that enables the listing of
	folders previously backed up.
	(-createFolder:withFM:): new method that enables the restoration
	of folders that were previously deleted.

	* Tools/SOGoToolBackup.m (-extractUserPreferences:intoRecord:): we
	must extract the values of the user defaults in order to put them
	in the record dictionary. Putting the defaults themselves will
	only produce serialized strings.

2009-08-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m: the objectClass are now all added
	to the return user records.

	* Tools/NSDictionary+SOGoTool.m (-userRecordAsLDIFEntry): new
	method that converts a user record as returned by LDAPSource to a
	compliant LDIF entry.

	* Tools/NSDictionary+SOGoTool.[hm]: new category module.

	* Tools/SOGoToolBackup.m: new "sogo-tool" utility that backs up
	user data following the file-format specified in README.backup

	* Tools/SOGoToolRemoveDoubles.m: new "sogo-tool" utility method