@@ -1,0 +1,46 @@
+Alias /sogo.woa/WebServerResources/ \
+        /usr/lib/GNUstep/SOGo/WebServerResources/
+Alias /SOGo.woa/WebServerResources/ \
+        /usr/lib/GNUstep/SOGo/WebServerResources/
+Alias /SOGO.woa/WebServerResources/ \
+        /usr/lib/GNUstep/SOGo/WebServerResources/
+
+<LocationMatch "^/SOGo/so/ControlPanel/Products/.*UI/Resources/.*jpg">
+  SetHandler default-handler
+</LocationMatch>
+
+<LocationMatch "^/SOGo/so/ControlPanel/Products/.*UI/Resources/.*png">
+  SetHandler default-handler
+</LocationMatch>
+
+<LocationMatch "^/SOGo/so/ControlPanel/Products/.*UI/Resources/.*gif">
+  SetHandler default-handler
+</LocationMatch>
+
+<LocationMatch "^/SOGo/so/ControlPanel/Products/.*UI/Resources/.*css">
+  SetHandler default-handler
+</LocationMatch>
+
+<LocationMatch "^/SOGo/so/ControlPanel/Products/.*UI/Resources/.*js">
+  SetHandler default-handler
+</LocationMatch>
+
+AliasMatch /SOGo/so/ControlPanel/Products/(.*)/Resources/(.*) \
+           /usr/lib/GNUstep/SOGo/$1.SOGo/Resources/$2
+
+<Proxy balancer://sogocluster>
+  BalancerMember http://127.0.0.1:20000 retry=1 max=1 timeout=120
+# If you enable those, don't forget the enable the spawning of multiple SOGo
+# processes. With Redhat-based distributions, this is done by setting the
+# "PREFORK" variable in /etc/sysconfig/sogo to the amount of processes as
+# value.
+#   BalancerMember http://127.0.0.1:20001 retry=1 max=1 timeout=120
+#   BalancerMember http://127.0.0.1:20002 retry=1 max=1 timeout=120
+  ProxySet lbmethod=byrequests maxattempts=1
+  Order allow,deny
+  Allow from all
+</Proxy>
+
+SetEnv proxy-nokeepalive 1
+ProxyRequests Off
+ProxyPass /SOGo balancer://sogocluster/SOGo
